# Synchrona

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
.cache/clangd/index/: VkBootstrap.cpp.A7779BA1C1A8EB27.idx  VkBootstrap.cpp.CC8A741782BAA48A.idx  VkBootstrap.h.56FEAC5C2595B9BA.idx  VkBootstrap.h.9DA8FC6CEC493CFE.idx  VkBootstrapDispatch.h.35D782A064AFFDF5.idx  VkBootstrapDispatch.h.3A0E2255247C678D.idx  base64.cpp.EA91E397FAF37CA6.idx  base64.hpp.338B45616E86AF84.idx  cgltf.h.A30F4B6E36219572.idx  core.hpp.FBCE0A1A4FDE9C33.idx  debug_ui.cpp.3ECC231073113F0D.idx  debug_ui.h.F705A659AA8759E4.idx  descriptors.cpp.3ED765EA8D7EC57B.idx  descriptors.cpp.9DB269DC2E2D2FA5.idx  descriptors.h.67BDE0FB870E452B.idx  descriptors.h.6C296B8E5B4B48FC.idx  engine.cpp.A40B18FCCB5300E1.idx  engine.cpp.E0C9210B99DC6E04.idx  engine.hpp.669E62CAB9074A3E.idx  engine.hpp.D49CC20B14618E8B.idx  fastgltf.cpp.7681D9260B9203B1.idx  glm_element_traits.hpp.8F56AF81638122C1.idx  graphics_pipeline.cpp.DA5A42B6F24DB2A1.idx  graphics_pipeline.h.6C8D05B3330816F8.idx  helper.cpp.35619873D1F78F71.idx  helper.cpp.F98455C85385B4DE.idx  helper.h.72956443EE39D5F4.idx  helper.h.B350C60B472323D2.idx  images.cpp.2035B87308859322.idx  images.cpp.B65EAB56CE20FEA4.idx  images.h.3EB9A599A55E3B0F.idx  images.h.CC73A1503686B384.idx  imconfig.h.577428F3011EC0B3.idx  imgui.cpp.F71710BDD9E85A6B.idx  imgui.h.B7DD7399BD713DD8.idx  imgui_draw.cpp.104C5099D1D57951.idx  imgui_impl_glfw.cpp.7CD9B1E0EE53A086.idx  imgui_impl_glfw.h.B37C4F34196B361F.idx  imgui_impl_vulkan.cpp.14DE73DC41098FF4.idx  imgui_impl_vulkan.h.9FEFA22240262057.idx  (+20 more)
assets/: 2020_skoda_rapid.glb  2022_porsche_911_gt3_992.glb  dutch_house.glb  grandma_house.glb  korean_bakery.glb  teapot.glb
assets/niagara_bistro-master/: bistro.gltf  bistrox.gltf
engine/: CMakeLists.txt
engine/include/: camer.h  debug_ui.h  descriptors.h  engine.h  engine.hpp  graphics_pipeline.h  helper.h  ibl.h  images.h  loader.h  raytrace.h  skybox.h  texture_loader.h  types.h
engine/shaders/: brdf_lut.comp  colored_triangle_mesh.vert  colored_triangle_mesh_slang.slang  equirect_to_cubemap.comp  gradient.comp  irradiance.comp  prefilter.comp  shadow.slang  shadow.vert  sky.comp  skybox.frag  skybox.vert  tex_image.frag  tex_images.slang  triangle_frag.frag
engine/src/: GETTING_STARTED.md  README.md  REFACTORING_DETAILED.md  camer.cpp  cgltf_impl.cpp  commands_and_sync.cpp  debug_ui.cpp  descriptors.cpp  engine.cpp  engine_original.cpp  graphics_pipeline.cpp  ibl.cpp  images.cpp  imgui_integration.cpp  immediate_submit.cpp  loader.cpp  memory.cpp  mesh.cpp  pipelines.cpp  raytrace.cpp  rendering.cpp  skybox.cpp  swapchain.cpp  texture_loader.cpp  textures.cpp  vma.cpp  vulkan_core.cpp
game/: CMakeLists.txt
game/shaders/: gradient.comp
game/src/: main.cpp
include/: engine.hpp  graphics_pipeline.h  helper.h  loader.h  types.h
shaders/: gradient.comp
src/: debug_ui.cpp  engine.cpp  graphics_pipeline.cpp  helper.cpp  images.cpp  loader.cpp  main.cpp
